# cli-chan

./: .gitignore  Cargo.toml  README.md  flake.nix
examples/: config.toml
src/: config.rs  main.rs
src/provider/: gemini.rs  mod.rs
