[package]
name = "cli-chan"
version = "0.1.0"
edition = "2021"
authors = ["Linium <bltyusuf03@gmail.com>", "trim <omuaz01@gmail.com>"]
description = "A cli AI anime girl app for those who live in terminal."
license = "GPL-3.0-only"
repository = "https://github.com/LiniHub/cli-chan"

[dependencies]
colored = "3.0.0"
log = "0.4.27"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
