[package]
name = "cli-chan"
version = "0.1.0"
edition = "2021"
authors = ["Linium <bltyusuf03@gmail.com>", "trim <omuaz01@gmail.com>"]
description = "A cli AI anime girl app for those who live in terminal."
license = "GPL-3.0-only"
repository = "https://github.com/LiniHub/cli-chan"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.4", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["std", "derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
